--- a/src/main/resources/com/tfg/dashboard_tfg/view/sonarrView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/sonarrView.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.tfg.dashboard_tfg.viewmodel.sonarrViewModel">
+            fx:controller="com.tfg.dashboard_tfg.viewmodel.SonarrViewModel">
 
     <VBox spacing="20.0"
           AnchorPane.bottomAnchor="20.0"
