added css for docker view

--- a/src/main/resources/com/tfg/dashboard_tfg/styles/styles.css
+++ b/src/main/resources/com/tfg/dashboard_tfg/styles/styles.css
@@ -210,6 +210,13 @@
     -fx-text-fill: -terminal-green;
 }
 
+.tile {
+    -fx-border-radius: 8px; /* Added unit */
+}
+
+.tile:hover {
+    -fx-border-color: #61afef;
+}
 
 /* global css*/
 
