--- a/src/main/resources/com/tfg/dashboard_tfg/view/rssView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/rssView.fxml
@@ -20,7 +20,7 @@
                  -fx-padding: 20 40 0 40;"
           styleClass="view">
 
-        <Label text="RSS"
+        <Label text="Indexer"
                style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
     </VBox>
 </AnchorPane>
