--- a/src/main/resources/com/tfg/dashboard_tfg/view/dockerView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/dockerView.fxml
@@ -22,7 +22,7 @@
                  -fx-padding: 20 40 0 40;"
           styleClass="view">
 
-        <HBox alignment="CENTER_LEFT" spacing="10.0">
+        <HBox alignment="CENTER_LEFT" spacing="10.0" >
             <Label text="Docker Manager" style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
             <Region HBox.hgrow="ALWAYS"/>
             <Button text="Refresh Containers" onAction="#refreshContainers" styleClass="action-button"/>
@@ -58,7 +58,7 @@
         </TitledPane>
 
         <!-- Docker Terminal Section -->
-        <TitledPane text="Docker Terminal" VBox.vgrow="ALWAYS">
+        <TitledPane text="Docker Terminal" VBox.vgrow="ALWAYS" style="-fx-padding: 0 0 20 0;" >
             <VBox spacing="10">
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                     <Region HBox.hgrow="ALWAYS"/>
