--- a/src/main/resources/com/tfg/dashboard_tfg/view/dockerView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/dockerView.fxml
@@ -19,18 +19,17 @@
           AnchorPane.rightAnchor="20.0"
           AnchorPane.topAnchor="20.0"
           style="-fx-border-width: 1;
-                 -fx-padding: 20 40 0 40;"
+                 -fx-padding: 20 20 20 20;"
           styleClass="view">
 
         <HBox alignment="CENTER_LEFT" spacing="10.0" >
             <Label text="Docker Manager" style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
             <Region HBox.hgrow="ALWAYS"/>
-            <Button text="Refresh Containers" onAction="#refreshContainers" styleClass="action-button"/>
-            <ToggleButton fx:id="autoRefreshToggle" text="Auto Refresh" onAction="#toggleAutoRefresh" styleClass="action-button"/>
+            <Button text="Refresh Containers" onAction="#refreshContainers" styleClass="console-button"/>
+            <ToggleButton fx:id="autoRefreshToggle" text="Auto Refresh" onAction="#toggleAutoRefresh" styleClass="console-button"/>
         </HBox>
 
-        <!-- Container Tiles Section -->
-        <TitledPane text="Container Monitoring">
+        <TitledPane text="Container Monitoring" styleClass="titled-pane">
             <VBox spacing="10">
                 <HBox spacing="10" alignment="CENTER_LEFT">
                     <Label text="Filter:" />
@@ -57,8 +56,7 @@
             </VBox>
         </TitledPane>
 
-        <!-- Docker Terminal Section -->
-        <TitledPane text="Docker Terminal" VBox.vgrow="ALWAYS" style="-fx-padding: 0 0 20 0;" >
+        <TitledPane text="Docker Terminal" VBox.vgrow="ALWAYS"  styleClass="titled-pane">
             <VBox spacing="10">
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                     <Region HBox.hgrow="ALWAYS"/>
@@ -78,7 +76,7 @@
 
                 <HBox spacing="10.0" alignment="CENTER_LEFT">
                     <Label text="History:"/>
-                    <ComboBox fx:id="commandHistory" prefWidth="400.0" styleClass="history-box"/>
+                    <ComboBox fx:id="commandHistory" prefWidth="400.0" styleClass="history-box" />
                     <Region HBox.hgrow="ALWAYS"/>
                     <Label fx:id="statusLabel" text="Ready" styleClass="status-label"/>
                 </HBox>
